# hype-bot

./: .gitignore  README.md  pyproject.toml
app/: main.py
