[tool.poetry]
name = "hype-bot"
version = "0.1.0"
description = ""
authors = ["hoando <hoando.dev@gmail.com>"]
readme = "README.md"

packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:main"
